air knife, rotterdam, pre-Poland

--- a/assets/vid/vids.html
+++ b/assets/vid/vids.html
@@ -11,6 +11,9 @@
 <div id="sa-dtv-vid">
   <iframe width="854" height="480" src="https://www.youtube.com/embed/CIAb6kxRzaM?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
 </div>
+<div id="featured-vid-LF2">
+  <iframe width="854" height="480" src="https://www.youtube.com/embed/xg_B24UScoQ?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
+</div>
 
 <!-- WB -->
 <div id="ap-surface-vid">
@@ -123,6 +126,12 @@
 </div>
 <div id="badger6-maint-vid">
   <iframe width="854" height="480" src="https://www.youtube.com/embed/kiKcrw7YVdg?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
+</div>
+<div id="bn-storage-vid">
+  <iframe width="854" height="480" src="https://www.youtube.com/embed/haRBBnQjZxE?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
+</div>
+<div id="bn-deburr-vid">
+  <iframe width="854" height="480" src="https://www.youtube.com/embed/ojuedcFk19g?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
 </div>
 <div id="bn-maint-vid">
   <iframe width="854" height="480" src="https://www.youtube.com/embed/cWRA6gtS2qI?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
