--- a/manuals.html
+++ b/manuals.html
@@ -98,6 +98,14 @@ permalink: /manuals
                 <td class="text-center"></td>
               </tr>
               <tr>
+                <td><a href="/abx-pro">AK-2L, AK-3L</a></td>
+                <td>AIR KNIFE<br>For use with AutoBox hose tractors</td>
+                <td class="text-center"><a href="/assets/pdf/manuals/Air_Knife_Manual.pdf" target="_blank" class="btn btn-sm">Manual</a></td>
+                <td class="text-center"></td>
+                <td class="text-center"><a href="/assets/pdf/tool-talks/Air_Knife_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a></td>
+                <td class="text-center"></td>
+              </tr>
+              <tr>
                 <td><a href="/autostroke">AST-200-V2</a></td>
                 <td>AUTOSTROKE<br>For use with AutoBox hose tractors</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/AST-200-V2_Manual.pdf" target="_blank" class="btn btn-sm">PL 629</a></td>
@@ -108,7 +116,7 @@ permalink: /manuals
               <tr>
                 <td><a href="/2inch-badger">BA-LK-P4, BA-BSPP4,<br>BA-MP6R, BA-MP9L,<br>BA-MP9R</a></td>
                 <td>2" BADGER<br>Rotary pipe cleaning nozzles</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/BA-LK-2inch_Manual.pdf" target="_blank" class="btn btn-sm">PL 593</a></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/BA_manual.pdf" target="_blank" class="btn btn-sm">PL 593</a></td>
                 <td class="text-center"></td>
                 <td class="text-center"><a href="/assets/pdf/tool-talks/BA2_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a></td>
                 <td class="text-center"></td>
@@ -116,7 +124,7 @@ permalink: /manuals
               <tr>
                 <td><a href="/4inch-badger">BA-H6</a></td>
                 <td>44k 4" BADGER<br>Rotary pipe cleaning nozzle</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/BA-H6_4inch_40K_Manual.pdf" target="_blank" class="btn btn-sm">PL 600</a></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/BA-H6_Manual.pdf" target="_blank" class="btn btn-sm">PL 600</a></td>
                 <td class="text-center"></td>
                 <td class="text-center"><a href="/assets/pdf/tool-talks/BA4_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a></td>
                 <td class="text-center"></td>
@@ -124,7 +132,7 @@ permalink: /manuals
               <tr>
                 <td><a href="/4inch-badger">BA-P6, BA-BSPP6,<br>BA-TM12</a></td>
                 <td>4" BADGER<br>Rotary pipe cleaning nozzles</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/BA_4inch_Manual.pdf" target="_blank" class="btn btn-sm">PL 501</a></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/BA_manual.pdf" target="_blank" class="btn btn-sm">PL 501</a></td>
                 <td class="text-center"></td>
                 <td class="text-center"><a href="/assets/pdf/tool-talks/BA4_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a></td>
                 <td class="text-center"></td>
@@ -132,23 +140,15 @@ permalink: /manuals
               <tr>
                 <td><a href="/6inch-badger">BA-P8, BA-MP9,<br>BA-M24</a></td>
                 <td>6" BADGER<br>Rotary pipe cleaning nozzles</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/BA_6inch_Manual.pdf" target="_blank" class="btn btn-sm">PL 503</a></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/BA_manual.pdf" target="_blank" class="btn btn-sm">PL 503</a></td>
                 <td class="text-center"></td>
                 <td class="text-center"><a href="/assets/pdf/tool-talks/BA6_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a></td>
                 <td class="text-center"></td>
               </tr>
               <tr>
                 <td><a href="/banshee">BN9.5, BN13, BN15,<br>BN18, BN24, BN33</a></td>
-                <td>BANSHEE<br>22k Tube spinners</td>
+                <td>BANSHEE<br>22k and 40k Tube spinners</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/BN_Manual.pdf" target="_blank" class="btn btn-sm">PL 505</a></td>
-                <td class="text-center"></td>
-                <td class="text-center"><a href="/assets/pdf/tool-talks/BN_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a></td>
-                <td class="text-center"></td>
-              </tr>
-              <tr>
-                <td><a href="/banshee">BN13, BN18, BN27</a></td>
-                <td>BANSHEE<br>40k Tube spinners</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/BN-40k_manual.pdf" target="_blank" class="btn btn-sm">PL 507</a></td>
                 <td class="text-center"></td>
                 <td class="text-center"><a href="/assets/pdf/tool-talks/BN_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a></td>
                 <td class="text-center"></td>
@@ -738,6 +738,12 @@ permalink: /manuals
                 <td>NON-LOCKING HEAD VERSION<br>Models: BA-P4, BA-BSPP4, BA-MP9L, BA-MP9R</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/BA_2inch_Manual_OBS.pdf" target="_blank" class="btn btn-sm">Manual</a></td>
                 <td class="text-center"></td>
+              </tr>
+              <tr>
+                <td>BRLM</td>
+                <td>TOOL CONSOLIDATION - Rigid Lance Machine</td>
+                <td class="text-center"></td>
+                <td class="text-center"><a href="/assets/pdf/reference/legacy/Obsolete_BRLM.pdf" target="_blank" class="btn btn-sm">Notice</a></td>
               </tr>
               <tr>
                 <td>BUD</td>
