--- a/rentals.html
+++ b/rentals.html
@@ -266,7 +266,7 @@ master-slider: yes
             </div>
             <div id="collapseTen" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTen">
               <div class="panel-body">
-                <p>Our expert field technicians can meet with you at the jobsite for training on rental tools and to make sure you have the support and equipment you need to successfully complete your job. Our daily rate for a technician is $995, plus incidentals.</p>
+                <p>Our expert field technicians can meet with you at the jobsite for training on rental tools and to make sure you have the support and equipment you need to successfully complete your job. <a href="/contact">Contact us for rates and availability.</a></p>
               </div>
             </div>
           </div>
