--- a/rotary-waterblast-tools/badger-6in-pipe-cleaning.html
+++ b/rotary-waterblast-tools/badger-6in-pipe-cleaning.html
@@ -253,7 +253,7 @@ master-slider: yes
             <div class="col-sm-4">
               <ul class="list-unstyled basic">
                 <h3>Manuals</h3>
-                <li><a href="/assets/pdf/manuals/BA_6inch_Manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;6" Badger User Manual</a></li>
+                <li><a href="/assets/pdf/manuals/BA_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Badger User Manual</a></li>
               </ul>
             </div>
             <div class="col-sm-4">
