--- a/rotary-waterblast-tools/banshee-tube-cleaners.html
+++ b/rotary-waterblast-tools/banshee-tube-cleaners.html
@@ -145,8 +145,8 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Flow Range</th>
-                      <td>5-6 gpm</td>
-                      <td><span class="metric">19-23 l/min</span></td>
+                      <td>4.5-8 gpm</td>
+                      <td><span class="metric">17-30 l/min</span></td>
                     </tr>
                     <tr>
                       <th>Flow Coefficient</th>
@@ -208,8 +208,8 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Flow Range</th>
-                      <td>7–9 gpm</td>
-                      <td><span class="metric">26–34 l/min</span></td>
+                      <td>7–10 gpm</td>
+                      <td><span class="metric">27–38 l/min</span></td>
                     </tr>
                     <tr>
                       <th>Flow Coefficient</th>
@@ -397,8 +397,8 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Flow Range</th>
-                      <td>11–24 gpm</td>
-                      <td><span class="metric">42–91 l/min</span></td>
+                      <td>12–25 gpm</td>
+                      <td><span class="metric">45–95 l/min</span></td>
                     </tr>
                     <tr>
                       <th>Flow Coefficient</th>
@@ -460,8 +460,8 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Flow Range</th>
-                      <td>11–48 gpm</td>
-                      <td><span class="metric">42–182 l/min</span></td>
+                      <td>12–49 gpm</td>
+                      <td><span class="metric">45–190 l/min</span></td>
                     </tr>
                     <tr>
                       <th>Flow Coefficient</th>
@@ -747,8 +747,7 @@ master-slider: yes
             <div class="col-sm-4">
               <ul class="list-unstyled basic">
                 <h3>Manuals</h3>
-                <li><a href="/assets/pdf/manuals/BN_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;22k/1500 bar Banshee Manual</a></li>
-                <li><a href="/assets/pdf/manuals/BN-40k_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;40k/2800 bar Banshee Manual</a></li>
+                <li><a href="/assets/pdf/manuals/BN_Manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Banshee Manual</a></li>
                 <li><a href="/assets/pdf/manuals/BNS13_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Shrouded Banshee (BNS13) Manual</a></li>
               </ul>
             </div>
@@ -771,12 +770,32 @@ master-slider: yes
               <div class="col-sm-4 col-centered">
                 <!-- Lightbox call -->
                 <div>
+                  <a href="#" src="/assets/vid/vids.html" data-featherlight="/assets/vid/vids.html #bn-storage-vid">
+                    <img src="/assets/vid/thumb/bn-storage-vid.png" alt="Banshee Cleaning/Storage Video" class="img-responsive" />
+                  </a>
+                </div>
+                <!-- End Lightbox call -->
+                <p class="caption">Banshee Cleaning &amp; Storage</p>
+              </div>
+              <div class="col-sm-4 col-centered">
+                <!-- Lightbox call -->
+                <div>
+                  <a href="#" src="/assets/vid/vids.html" data-featherlight="/assets/vid/vids.html #bn-deburr-vid">
+                    <img src="/assets/vid/thumb/bn-deburr-vid.png" alt="Banshee Deburring Video" class="img-responsive" />
+                  </a>
+                </div>
+                <!-- End Lightbox call -->
+                <p class="caption">Deburring Your Banshee</p>
+              </div>
+              <div class="col-sm-4 col-centered">
+                <!-- Lightbox call -->
+                <div>
                   <a href="#" src="/assets/vid/vids.html" data-featherlight="/assets/vid/vids.html #bn-maint-vid">
                     <img src="/assets/vid/thumb/bn-maint-vid.png" alt="Banshee Tool Maintenance Video" class="img-responsive" />
                   </a>
                 </div>
                 <!-- End Lightbox call -->
-                <p class="caption">Banshee Maintenance Video</p>
+                <p class="caption">Banshee Maintenance</p>
               </div>
             </div>
           </section>
