--- a/rotary-waterblast-tools/beetle.html
+++ b/rotary-waterblast-tools/beetle.html
@@ -95,6 +95,7 @@ master-slider: yes
             <ul>
               <li><a href="#section-bar-1"><span>Specifications</span></a></li>
               <li><a href="#section-bar-2"><span>Manuals/Docs</span></a></li>
+              <li><a href="#section-bar-4"><span>Videos</span></a></li>
             </ul>
         </nav>
         <div class="content-wrap">
@@ -315,6 +316,22 @@ master-slider: yes
               <p>Our expert staff is available Monday through Friday 8AM - 5PM MST to answer questions and offer advice on your toughest cleaning applications.</p>
               <h4 class="slab">Phone: +1 970 259-2869<br>US Toll Free: (866) 795-1586</h4>
             </aside>
+          </section>
+          
+          <!-- Videos -->
+          <section id="section-bar-4">
+            <div class="row row-centered">
+              <div class="col-sm-4 col-centered">
+                <!-- Lightbox call -->
+                <div>
+                  <a href="#" src="/assets/vid/vids.html" data-featherlight="/assets/vid/vids.html #bn-storage-vid">
+                    <img src="/assets/vid/thumb/bn-storage-vid.png" alt="Banshee Cleaning/Storage Video" class="img-responsive" />
+                  </a>
+                </div>
+                <!-- End Lightbox call -->
+                <p class="caption">Banshee/Beetle Cleaning &amp; Storage</p>
+              </div>
+            </div>
           </section>
 
         </div><!-- /content -->
