--- a/waterblast-automation/autobox-abx-2l.html
+++ b/waterblast-automation/autobox-abx-2l.html
@@ -185,7 +185,7 @@ master-slider: yes
               <ul class="list-unstyled basic">
                 <h3>Documentation</h3>
                 <li><a href="/assets/pdf/data-sheets/ABX-2L_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;ABX-2L Data Sheet</a></li>
-                <li><a href="/assets/pdf/tool-talks/ABX-2L_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;ABX-2L Tool Talk</a></li>
+                <li><a href="/assets/pdf/tool-talks/ABX-2L_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;ABX-2L Tool Talk</a> <em class="grey">- 06/2018</em></li>
                 <li><a href="/assets/pdf/data-sheets/AutoPack_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoPack Data Sheet</a></li>
               </ul>
             </div>
