--- a/waterblast-automation/autobox-abx-3l.html
+++ b/waterblast-automation/autobox-abx-3l.html
@@ -136,7 +136,7 @@ master-slider: yes
               <td><span class="metric">16–76 mm<br>16–38 mm</span></td>
             </tr>
             <tr>
-              <th>Maximum Air Pressure</th>
+              <th>System Operating Pressure</th>
               <td>100 psi</td>
               <td><span class="metric">0.70 MPa</span></td>
             </tr>
