--- a/waterblast-tools-automated-equipment.html
+++ b/waterblast-tools-automated-equipment.html
@@ -295,6 +295,25 @@ permalink: /waterblast-tools-automated-equipment
       </a>
     </div>
 
+    <div class="mix exchanger-cleaning" data-name="air-knife" data-designation="manual">
+      <a href="/air-knife" class="search-text">
+        <img src="/assets/img/product/air-knife-01.jpg" class="img-responsive" />
+        <h3>Air Knife</h3>
+        <h5>For AutoBox systems</h5>
+        <table class="table">
+          <tbody>
+            <tr>
+              <th colspan="2" style="text-align:center;">Improves hose traction in difficult tube cleaning applications</th>
+            </tr>
+            <tr>
+              <td colspan="2" style="text-align:center;">Small size and quick installation</td>
+            </tr>
+          </tbody>
+        </table>
+        <button>View Details</button>
+      </a>
+    </div>
+
     <div class="mix exchanger-cleaning" data-name="banshee" data-designation="manual">
       <a href="/banshee" class="search-text">
         <img src="/assets/img/product/banshee-01.jpg" class="img-responsive" />
