--- a/rotary-waterblast-tools/badger-4in-pipe-cleaning.html
+++ b/rotary-waterblast-tools/badger-4in-pipe-cleaning.html
@@ -326,8 +326,8 @@ master-slider: yes
             <div class="col-sm-4">
               <ul class="list-unstyled basic">
                 <h3>Manuals</h3>
-                <li><a href="/assets/pdf/manuals/BA_4inch_Manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;4" Badger User Manual</a></li>
-                <li><a href="/assets/pdf/manuals/BA-H6_4inch_40K_Manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;44k 4" Badger User Manual</a></li>
+                <li><a href="/assets/pdf/manuals/BA_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Badger User Manual</a></li>
+                <li><a href="/assets/pdf/manuals/BA-H6_Manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;44k 4" Badger User Manual</a></li>
               </ul>
             </div>
             <div class="col-sm-4">
