misc manual updates - first commit after Poland

--- a/manuals.html
+++ b/manuals.html
@@ -75,7 +75,7 @@ permalink: /manuals
               </tr>
               <tr>
                 <td><a href="/abx-3l">ABX-3L</a><br></td>
-                <td>AUTOBOX ABX-3L<br>Automated system for triplel flex lancing of exchanger tube IDs</td>
+                <td>AUTOBOX ABX-3L<br>Automated system for triple flex lancing of exchanger tube IDs</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/ABX-3L_manual.pdf" target="_blank" class="btn btn-sm">PL 630</a></td>
                 <td class="text-center"><a href="/assets/pdf/data-sheets/ABX-3L_data_sheet.pdf" target="_blank" class="btn btn-sm">Data Sheet</a></td>
                 <td class="text-center"><a href="/assets/pdf/tool-talks/ABX-3L_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a></td>
@@ -292,7 +292,7 @@ permalink: /manuals
               <tr>
                 <td><a href="/abx-pro">CB-ABX-PRO</a></td>
                 <td>AUTOBOX CB-ABX-PRO<br>Control Box for AutoBox ABX-PRO</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/CB-ABX_user_manual.pdf" target="_blank" class="btn btn-sm">PL 611</a></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/CB-ABX-PRO_manual.pdf" target="_blank" class="btn btn-sm">PL 624</a></td>
                 <td class="text-center"></td>
                 <td class="text-center"></td>
                 <td class="text-center"></td>
@@ -738,6 +738,12 @@ permalink: /manuals
                 <td>NON-LOCKING HEAD VERSION<br>Models: BA-P4, BA-BSPP4, BA-MP9L, BA-MP9R</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/BA_2inch_Manual_OBS.pdf" target="_blank" class="btn btn-sm">Manual</a></td>
                 <td class="text-center"></td>
+              </tr>
+              <tr>
+                <td>BHK</td>
+                <td>Blackhawk concrete hydro-demolition system</td>
+                <td class="text-center"><a href="/assets/pdf/manuals/BHK-100_Manual.pdf" target="_blank" class="btn btn-sm">Manual</a></td>
+                <td class="text-center"><a href="/assets/pdf/reference/legacy/Obsolete_BHK.pdf" target="_blank" class="btn btn-sm">Notice</a></td>
               </tr>
               <tr>
                 <td>BRLM</td>
