--- a/sewer-tools-nozzles/warthog-wv.html
+++ b/sewer-tools-nozzles/warthog-wv.html
@@ -60,7 +60,7 @@ master-slider: yes
       <ul class="feature-list">
         <li>Cleans lines as small as 2” (51 mm) I.D.</li>
         <li>Excellent for navigating elbows</li>
-        <li>No high pressure seals of bearings to service</li>
+        <li>No high pressure seals or bearings to service</li>
       </ul>
 
       <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Quote</a>
