catalog updates, misc updates, add Dutch website to header

--- a/assets/vid/vids.html
+++ b/assets/vid/vids.html
@@ -14,6 +14,9 @@
 <div id="featured-vid-LF2">
   <iframe width="854" height="480" src="https://www.youtube.com/embed/xg_B24UScoQ?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
 </div>
+<div id="featured-vid-ligori-01">
+  <iframe width="854" height="480" src="https://www.youtube.com/embed/y6JE-oOlRMU?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
+</div>
 
 <!-- WB -->
 <div id="ap-surface-vid">
