--- a/safety-data-sheets.html
+++ b/safety-data-sheets.html
@@ -100,6 +100,14 @@ permalink: /sds
         <td>Loctite C5-A is a copper based anti-seize which suspends copper and graphite in a high quality grease. Protects metal parts from rust, corrosion, galling, and seizing at temperatures to 1800°F (982°C).</td>
       </tr>
       <tr>
+        <td>GP 040</td>
+        <td>Compressor Oil, Bulk</td>
+        <td>Chevron</td>
+        <td><a href="assets/pdf/safety/Chevron-HiPerSYN-Oil220-SDS.pdf" target="_blank">Cetus HiPerSYN Oil 100, 150, 220, 320, 460</a></td>
+        <td>Cetus® HiPerSYN® Oils are synthetic compressor oils. Cetus HiPerSYN Oils are recommended for air compressors; especially portable and stationary rotary, vane, and screw compressors.
+        </td>
+      </tr>
+      <tr>
         <td>GP 041</td>
         <td>Air Tool Oil, 32 oz.</td>
         <td>Mobil</td>
@@ -184,11 +192,11 @@ permalink: /sds
         <td>Low viscosity, linear Polydimethylsiloxane polymers with typical dynamic viscosities of 5 and 10mPa•s (cps).</td>
       </tr>
       <tr>
-        <td>SC250 048 GP 040</td>
-        <td>High Temp Visc, Not for SC-H (6 oz.)</td>
-        <td>ChevronTexaco</td>
-        <td><a href="assets/pdf/safety/MSDS_GP040.pdf" target="_blank">Tegra Synthetic Gear Lubricant ISO 220</a></td>
-        <td>Tegra Synthetic Gear Lubricant has load carrying and anti-wear properties. It protects against rust, corrosion, foaming, oxidation; and has excellent demulsibility.
+        <td>SC250 048</td>
+        <td>Compressor Oil, 6 oz.</td>
+        <td>Chevron</td>
+        <td><a href="assets/pdf/safety/Chevron-HiPerSYN-Oil220-SDS.pdf" target="_blank">Cetus HiPerSYN Oil 100, 150, 220, 320, 460</a></td>
+        <td>Cetus® HiPerSYN® Oils are synthetic compressor oils. Cetus HiPerSYN Oils are recommended for air compressors; especially portable and stationary rotary, vane, and screw compressors.
         </td>
       </tr>
       <tr>
