--- a/waterblast-automation/air-knife.html
+++ b/waterblast-automation/air-knife.html
@@ -159,7 +159,7 @@ master-slider: yes
             <div class="col-sm-4">
               <ul class="list-unstyled basic">
                 <h3>Documentation</h3>
-                <li><a href="/assets/pdf/tool-talks/Air_Knife_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Air Knife Tool Talk</a></li>
+                <li><a href="/assets/pdf/tool-talks/Air_Knife_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Air Knife Tool Talk</a> <em class="grey">- 07/2018</em></li>
               </ul>
             </div>
             <aside class="col-sm-3 col-sm-offset-1 aside-box">
