--- a/waterblast-automation/inside-diameter-pipe-cleaner.html
+++ b/waterblast-automation/inside-diameter-pipe-cleaner.html
@@ -207,8 +207,8 @@ master-slider: yes
         <h5>Gopher Rotary Tools</h5></a>
       </div>
       <div class="item">
-        <a href="/sg-swivel"><img class="img-responsive" src="/assets/img/product/thumb-swivel-sg.jpg" alt="SG Swilvel Models">
-        <h5>SG Swilvel Models</h5></a>
+        <a href="/sg-swivel"><img class="img-responsive" src="/assets/img/product/thumb-swivel-sg.jpg" alt="SG Swivel Models">
+        <h5>SG Swivel Models</h5></a>
       </div>
       <div class="item">
         <a href="/rigid-lance-machine"><img class="img-responsive" src="/assets/img/product/thumb-brlm-01.jpg" alt="Rigid Lance Machine">
