--- a/index.html
+++ b/index.html
@@ -408,14 +408,14 @@ landing: yes
     </div>
     <ul class="home-news list-unstyled">
       <li>
+        <h4><a href="http://news.stoneagetools.com/tool-obsolescence-bhk-100">Obsolescence Notice</a></h4>
+        <p>Blackhawk BHK-100<br>
+        <small><i class="fa fa-newspaper-o"></i> Bulletin, July 2018</small></p>
+      </li> 
+      <li>
         <h4><a href="http://news.stoneagetools.com/stoneage-welcomes-director-intl-sales">StoneAge Names New Director of International Sales</a></h4>
         <p>StoneAge is pleased to welcome Steve Johnson as Director of International Sales.<br>
         <small><i class="fa fa-paper-plane-o"></i> E-blast, June 2018</small></p>
-      </li> 
-      <li>
-        <h4><a href="http://news.stoneagetools.com/stoneage-welcomes-vp-finance">StoneAge Welcomes VP of Finance and IT</a></h4>
-        <p>StoneAge is pleased to welcome Peter Brooks as Vice President of Finance and Information Technology.<br>
-        <small><i class="fa fa-paper-plane-o"></i> E-blast, May 2018</small></p>
       </li> 
       <li>
         <h4><a href="http://news.stoneagetools.com/stoneage-welcomes-vp-finance">StoneAge Welcomes VP of Finance and IT</a></h4>
@@ -432,11 +432,6 @@ landing: yes
         <p>StoneAge is pleased to announce the promotion of Sword Zhou to Sales Director, Northern Asia<br>
         <small><i class="fa fa-paper-plane-o"></i> E-blast, March 2018</small></p>
       </li>
-      <li>
-        <h4><a href="http://news.stoneagetools.com/stoneage-welcomes-new-solutions-manager-southeast">StoneAge welcomes new Solutions Manager</a></h4>
-        <p>StoneAge is pleased to welcome Bradley Coble as our Southeast Regional Solutions Manager.<br>
-        <small><i class="fa fa-paper-plane-o"></i> E-blast, February 2018</small></p>
-      </li> 
       <li><a href="http://news.stoneagetools.com/">More news here</a></li>
     </ul>
   </div>
@@ -450,12 +445,12 @@ landing: yes
     
     <!-- Lightbox call -->
     <div>
-      <a href="#" src="/assets/vid/vids.html" data-featherlight="/assets/vid/vids.html #featured-vid-LF2">
-        <img src="assets/vid/thumb/featured-vid-LF2.jpg" alt="Little Frank talks tube cleaning" class="img-responsive" />
+      <a href="#" src="/assets/vid/vids.html" data-featherlight="/assets/vid/vids.html #featured-vid-ligori-01">
+        <img src="assets/vid/thumb/featured-vid-ligori-01.jpg" alt="Frank Ligori answers customer questions about sewer jetting" class="img-responsive" />
       </a>
     </div>
     <!-- End Lightbox call -->
-    <p>Automation Technician "Little Frank" Romito talks about tube cleaning in a confined space.</p>
+    <p>Sewer Division Dealer Manager Frank Ligori discusses some of the common questions he gets from customers and end-users of Warthog tools. </p>
     <div class="section-heading margin-top-30">
       <h2>Mobile App</h2>
     </div>
