--- a/contact.html
+++ b/contact.html
@@ -60,6 +60,10 @@ contact-main: yes
             <p>
               (+44) (0) 1684 892065<br/>
               <a href="/europe">View details</a></p>
+            <h3>Netherlands</h3>
+            <p>
+              +31 8590 27370<br/>
+              <a href="/netherlands">View details</a></p>
           </div>
           <!-- E-mail Us -->
           <div class="col-sm-4 contact-method">
