--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@ landing: yes
       data-delay="1800" 
       data-ease="easeOutQuint"                
       data-offset-x="150" 
-      data-offset-y="75" 
+      data-offset-y="30" 
       data-origin="ml" 
       data-position="normal"   
-      data-masked="true">Stay tuned for details.
+      data-masked="true">Visit our new StoneAge Netherlands facility in Rotterdam for equipment sales, rentals, repairs, and support.
     </div>
 
     <div class="ms-layer feature-h2" style="width:328px;"   
@@ -44,14 +44,13 @@ landing: yes
       data-delay="600" 
       data-ease="easeOutQuint"                
       data-offset-x="150" 
-      data-offset-y="0" 
+      data-offset-y="-30" 
       data-origin="ml" 
       data-position="normal">
-      Coming Soon! Our new StoneAge Netherlands facility in Rotterdam.
+      Now Open!
     </div>
 
-<!--
-    <a href="https://www.stoneagetools.com/louisiana" class="ms-layer ms-btn ms-btn-circle ms-btn-m" 
+    <a href="/netherlands" class="ms-layer ms-btn ms-btn-circle ms-btn-m" 
        data-effect="t(true,n,n,-600,n,n,n,n,n,n,n,n,n,n,n)" 
        data-duration="2400" 
        data-delay="1400" 
@@ -62,7 +61,6 @@ landing: yes
        data-origin="ml" 
        data-position="normal">More Info
     </a>
--->
 
     <img  class="ms-layer" src="/assets/img/features/Rotterdam-building-01.png" 
          data-src="/assets/img/features/Rotterdam-building-01.png" alt="StoneAge Rotterdam" style=""  
