--- a/loc-europe.html
+++ b/loc-europe.html
@@ -3,13 +3,13 @@ layout: default
 page-type: contact
 title: StoneAge Europe - Waterblast tools and automated equipment for high pressure hydrobrasting
 permalink: /europe
-contact-europe: yes
+contact-uk: yes
 ---
 
 <section id="contact">
   <div class="fluid-container landing-nav">
     <div class="container">
-      <h1 class="page-heading">StoneAge Europe</h1>
+      <h1 class="page-heading">StoneAge UK</h1>
     </div>
   </div>
   <!-- Google Map -->
@@ -21,7 +21,7 @@ contact-europe: yes
       <ul class="breadcrumb">
         <li><a href="/">Home</a></li>
         <li><a href="/contact">Contact</a></li>
-        <li class="active">StoneAge Europe</li>
+        <li class="active">StoneAge UK</li>
       </ul> 
     </div>
   </div>
@@ -32,7 +32,7 @@ contact-europe: yes
       <aside class="col-sm-3 margin-bottom-30 cta">
         <img src="/assets/img/stoneage-uk-aquapower.jpg" class="img-responsive img-thumbnail" alt="StoneAge Europe office">
         <div class="padding-tb-30">
-          <p><span class="slab">StoneAge Europe</span><br/>
+          <p><span class="slab">StoneAge UK</span><br/>
             Unit 2, Britannia Business Centre<br/>
             Britannia Way<br/>
             Malvern WR14 1GZ<br/>
@@ -45,8 +45,8 @@ contact-europe: yes
 
       <div class="col-sm-7 col-sm-offset-1">
         <div class="row margin-bottom-30">
-          <p style="font-size:120%;">StoneAge Europe provides industry-leading equipment for high pressure waterblasting and sewer jetting, along with world-class technical support, to industrial cleaning contractors across the European Economic Area.</p>
-          <a href="#" data-featherlight="/assets/img/SA_EU_distribution_map.jpg"><img src="/assets/img/SA_EU_distribution_map.jpg" alt="StoneAge European distribution map" class="float-right img-responsive" /><p class="small text-right"><em>Click to enlarge</em></p></a>        
+          <p style="font-size:120%;">StoneAge UK provides industry-leading equipment for high pressure waterblasting and sewer jetting, along with world-class technical support, to industrial cleaning contractors across the European Economic Area.</p>
+<!--          <a href="#" data-featherlight="/assets/img/SA_EU_distribution_map.jpg"><img src="/assets/img/SA_EU_distribution_map.jpg" alt="StoneAge European distribution map" class="float-right img-responsive" /><p class="small text-right"><em>Click to enlarge</em></p></a>        -->
         </div>
 
         <h3 class="section-heading">Operations and Field Support</h3>
