Add translated manuals

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ landing: yes
       data-position="normal">Announcing a major update to our jetting and pressure calculators
     </div>
 
-    <a href="http://news.stoneagetools.com/updated-jetting-app-is-here" target="_self" class="ms-layer ms-btn ms-btn-circle ms-btn-m" 
+    <a href="https://news.stoneagetools.com/updated-jetting-app-is-here" target="_self" class="ms-layer ms-btn ms-btn-circle ms-btn-m" 
        data-effect="t(true,n,n,-600,n,n,n,n,n,n,n,n,n,n,n)" 
        data-duration="2400" 
        data-delay="1600" 
@@ -273,7 +273,7 @@ landing: yes
       data-masked="true">Your solution to automated waterblasting
     </div>
 
-    <a href="http://info.stoneagetools.com/autopack" target="_self" class="ms-layer ms-btn ms-btn-circle ms-btn-m" 
+    <a href="https://info.stoneagetools.com/autopack" target="_self" class="ms-layer ms-btn ms-btn-circle ms-btn-m" 
        data-effect="t(true,n,n,-600,n,n,n,n,n,n,n,n,n,n,n)" 
        data-duration="2400" 
        data-delay="1600" 
@@ -392,7 +392,15 @@ landing: yes
       <a href="http://www.tristateseminar.com/events/34th-annual-tri-state-seminar/event-summary-773bd828620148b3981ee7746e5bdee7.aspx" target="_blank"><img src="/assets/img/thumb/upcoming_events_tristate_2018.png" class="img-responsive"/ alt="Tri-State Seminar"></a>
       <div class="caption text-center">
         <h4><a href="http://www.tristateseminar.com/events/34th-annual-tri-state-seminar/event-summary-773bd828620148b3981ee7746e5bdee7.aspx" target="_blank">34th  Annual Tri-State Seminar</a><br>
-          <span class="small">South Point Hotel &amp; Casino<br><strong>September 25-27, 2018<br>Las Vegas, Nevada</strong></span></h4>
+          <span class="small"><strong>September 25-27, 2018<br>Las Vegas, Nevada</strong></span></h4>
+      </div>
+    </div>
+    
+    <div class="row" style="padding-top:25px;">
+      <a href="https://www.weftec.org/" target="_blank"><img src="/assets/img/thumb/upcoming-events-weftec-2018.jpg" class="img-responsive"/ alt="Tri-State Seminar"></a>
+      <div class="caption text-center">
+        <h4><a href="https://www.weftec.org/" target="_blank">WEFTEC</a><br>
+          <span class="small"><strong>October 1-3, 2018<br>New Orleans, Louisiana</strong></span></h4>
       </div>
     </div>
     
