--- a/waterblast-automation/striker-remote-shotgunning.html
+++ b/waterblast-automation/striker-remote-shotgunning.html
@@ -192,6 +192,7 @@ master-slider: yes
           <ul class="list-unstyled basic">
             <h3>Documentation</h3>
             <li><a href="/assets/pdf/data-sheets/striker_std_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Striker Data Sheet</a></li>
+            <li><a href="/assets/pdf/data-sheets/striker_fan_cleaner_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Striker Fan Cleaning Data Sheet</a></li>
             <li><a href="/assets/pdf/tool-talks/striker_std_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Striker Tool Talk</a></li>
           </ul>
         </div>
