--- a/loc-nl.html
+++ b/loc-nl.html
@@ -37,7 +37,7 @@ contact-nl: yes
             3274 KE Heinenoord<br/>
             Netherlands<br/><br/>
             +31 8590 27370<br/>
-            <a href="mailto:sales-nl@stoneagetools.com">sales-nl@stoneagetools.com</a><br/><br/>
+            <a href="mailto:sales-eu@stoneagetools.com">sales-eu@stoneagetools.com</a><br/><br/>
             <small>Monday to Friday 8:00am–5:00pm GMT+2</small></p>
         </div>
       </aside>
@@ -46,18 +46,20 @@ contact-nl: yes
         <div class="row margin-bottom-30">
           <h2>NOW OPEN FOR BUSINESS! Grand Opening November 2018</h2>
           <p style="font-size:120%;">StoneAge Netherlands is a full-service facility offering equipment sales, rentals, repairs, training, and support.</p>
-          <p style="font-size:120%;">StoneAge NL's primary service area includes the Benelux region and Germany. International service inquiries can also be facilitated by <a href="/europe">StoneAge Europe, UK.</a></p>       
+          <p style="font-size:120%;">StoneAge Netherlands' primary service area includes the Benelux region, Austria, and Germany. International service inquiries can also be facilitated by <a href="/europe">StoneAge Europe, UK.</a></p>       
         </div>
 
         <h3 class="section-heading">Operations and Customer Service</h3>
         <div class="row">
           <div class="col-sm-6">
             <p><strong>Sander de Korte</strong><br/>
+              Customer Service Manager<br/>
               Office: +31 8590 27370<br/>
             <a href="mailto:sander.dekorte@stoneagetools.com">sander.dekorte@stoneagetools.com</a></p>
           </div>
           <div class="col-sm-6">
             <p><strong>Sigo Waardenburg</strong><br/>
+              Service and Rental Technician<br/>
               Office: +31 8590 27370<br/>
             <a href="mailto:sigo.waardenburg@stoneagetools.com">sigo.waardenburg@stoneagetools.com</a></p>
           </div>
