--- a/waterblast-automation/blackhawk-concrete-demo.html
+++ b/waterblast-automation/blackhawk-concrete-demo.html
@@ -70,7 +70,7 @@ master-slider: yes
         <li>Removes up to 12 in. (305 mm) of material or more based on pressure, flow, and grade of concrete</li>
       </ul>
 
-      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Quote</a>
+      <a href="http://news.stoneagetools.com/tool-obsolescence-bhk-100" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">No Longer Available</a>
 
   </div>
 
